<resources>
    <string name="app_name">Github User</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="profile">Profile</string>
    <string name="repositories">Repositories</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="input_username">Enter Username</string>
    <string name="_0">0</string>
    <string name="language_options">Change Language Settings</string>
    <string name="title_activity_user_detail">UserDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dummy_value">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="type">Type</string>
    <string name="github_logo">Github Logo</string>
    <string name="ic_baseline_location_on_24">ic_baseline_location_on_24</string>
    <string name="ic_baseline_work_24">ic_baseline_work_24</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>

    <string name="reminder_key">reminder</string>
    <string name="language_key">language</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_summary">This is a daily reminder for Github app at 09:00 AM</string>
    <string name="language">Language</string>
</resources>